--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         go-version: ["1.18", "1.20"]
-        mongodb-version: ["4.2", "4.4", "5.0", "6.0"]
+        mongodb-version: ["4.4", "5.0", "6.0"]
     steps:
       - uses: actions/checkout@v2
       - name: Setup Go
