--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,14 +29,12 @@ jobs:
           mongodb-version: ${{ matrix.mongodb-version }}
           mongodb-replica-set: test-rs
 
-      - name: Run Tests
-        run: go test -v -covermode=count -coverprofile=coverage.out
-
-      - name: Convert coverage to lcov
-        uses: jandelgado/gcov2lcov-action@v1
-
-      - name: Coveralls
-        uses: coverallsapp/github-action@v2
-        with:
-          github-token: ${{ secrets.ACCESS_TOKEN }}
-          path-to-lcov: coverage.lcov
+      - name: Run Unit tests
+        run: |
+          go test -race -covermode atomic -coverprofile=covprofile ./...
+      - name: Install goveralls
+        run: go install github.com/mattn/goveralls@latest
+      - name: Send coverage
+        env:
+          COVERALLS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        run: goveralls -coverprofile=covprofile -service=github
