--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: ["1.18", "1.20"]
-        mongodb-version: ["4.4", "5.0", "6.0"]
+        go-version: ["1.18"]
+        mongodb-version: ["4.4"]
     steps:
       - uses: actions/checkout@v2
       - name: Setup Go
@@ -36,5 +36,5 @@ jobs:
         run: go install github.com/mattn/goveralls@latest
       - name: Send coverage
         env:
-          COVERALLS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          COVERALLS_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
         run: goveralls -coverprofile=covprofile -service=github
